[package]
name = "steal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
clap = { version = "4.5.1", features = ["cargo"] }
futures = "0.3.30"
indicatif = "0.17.8"
mime = "0.3.17"
rayon = "1.9.0"
reqwest = { version = "0.11.24", features = ["json", "stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tempfile = "3.10.1"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3.10.1"
