[package]
name = "steal"
version = "0.1.1"
edition = "2021"
description = "A CLI tool for multipart downloading."
license = "Apache-2.0"
homepage = "https://github.com/Isaac-Fate/steal"
repository = "https://github.com/Isaac-Fate/steal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
clap = { version = "4.5.1", features = ["cargo"] }
futures = "0.3.30"
indicatif = "0.17.8"
num_cpus = "1.16.0"
reqwest = { version = "0.12.1", features = ["stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3.10.1"
